[gd_scene load_steps=11 format=2]

[ext_resource path="res://Interactables/Models/Crypt.tscn" type="PackedScene" id=1]
[ext_resource path="res://Interactables/GodotHead.tscn" type="PackedScene" id=2]
[ext_resource path="res://Interactables/GodotCrypt.gd" type="Script" id=3]
[ext_resource path="res://Assets/Audio/godot_talk.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Audio/crow.ogg" type="AudioStream" id=5]
[ext_resource path="res://Assets/Audio/thunder.ogg" type="AudioStream" id=6]

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.15592, 2.72525, 2.89366 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id=5]
material = SubResource( 4 )
size = Vector2( 0.02, 0.02 )

[sub_resource type="Curve" id=6]
_data = [ Vector2( 0, 0 ), 0.0, 9.53571, 0, 0, Vector2( 0.247191, 1 ), 0.428753, 0.428753, 0, 0, Vector2( 1, 0 ), -0.212815, 0.0, 0, 0 ]

[node name="GodotCrypt" type="Area"]
collision_layer = 2
script = ExtResource( 3 )

[node name="CrowSoundTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CrowSoundTimer2" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="CameraShakeTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GodotTalk" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0
bus = "GodotTalk"

[node name="CrowSound" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.45728, 6.809, 6.92897 )
stream = ExtResource( 5 )
unit_db = 6.0
bus = "AmbientSounds"

[node name="CrowSound2" type="AudioStreamPlayer3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 8.75871, 6.809, -1.58728 )
stream = ExtResource( 5 )
bus = "AmbientSounds"

[node name="ActivationSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "AmbientSounds"

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.39919, 0.817514 )
shape = SubResource( 3 )

[node name="Crypt" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0187826, -0.0441623, 0.0183802 )

[node name="GodotHead" parent="." instance=ExtResource( 2 )]
transform = Transform( 1.5, 0, 0, 0, -6.55671e-08, -1.5, 0, 1.5, -6.55671e-08, 0.0692753, 3.7246, -1.41269 )

[node name="CPUParticles" type="CPUParticles" parent="GodotHead"]
transform = Transform( 1, 0, 0, 0, -3.34284e-07, 0.999999, 0, -0.999999, -3.34284e-07, 0, 0.0679477, 0 )
amount = 120
lifetime = 2.0
preprocess = 1.0
mesh = SubResource( 5 )
emission_shape = 3
emission_points = PoolVector3Array( 0.0313249, -0.00598187, 0.0732508, -0.00912677, 0.0265536, 0.0747961, -0.0794483, 0.00734467, 0.00244248, 0.0420201, 0.00284823, -0.0678564, -0.0714207, -0.0279529, -0.022267, -0.0581802, 0.0547725, -0.000659333, 0.0623082, 0.00844827, 0.0492146, 0.059613, -0.0122481, 0.0517309, -0.0578935, 0.0525564, -0.0169861, 0.0402657, -0.00908476, -0.0683154, 0.0203587, -0.0753427, -0.0173021, 0.0652751, 0.000974467, 0.0459407, 0.0719224, -0.0291156, -0.0187034, 3.32503e-05, 0.0321703, 0.07321, -0.021696, -0.0745613, 0.0191739, 0.0752692, -0.0022767, -0.0265733, -0.00806493, 0.00551364, 0.0793048, -0.0490589, 0.037869, 0.05045, 0.0214867, 0.0662878, 0.0391206, -0.0485984, -0.0630664, -0.00729828, -0.0210632, -0.0524746, 0.0565644, -0.0606964, -0.00738362, -0.0513797, 0.0670919, -0.0373826, 0.0218157, 0.00958327, 0.00889537, -0.0787792, 0.0759624, 0.0205941, -0.0138893, 0.0662749, 0.042498, 0.013672, -0.00270596, -0.0677471, 0.0423368, 0.0274632, -0.0750732, 0.000222552, -0.0254029, -0.0322671, -0.0684577, -0.0548594, 0.0565032, -0.0133496, 0.0636963, -0.0328187, 0.0354258, -0.0240914, 0.0761936, -0.00276888, -0.0071287, 0.0396346, 0.0690441, 0.0158133, 0.0679483, 0.0390795, -0.0187957, -0.0766763, -0.0129765, 0.0738835, 0.0221309, -0.020682, 0.0579802, 0.0512479, 0.0199956, -0.0272165, 0.0743078, 0.0119173, -0.0661164, 0.00898133, 0.0439222, 0.0328751, 0.0712055, -0.0155902, 0.0455428, -0.0477114, 0.0451956, -0.0610801, -0.00327949, 0.0514878, -0.0767186, -0.00531564, -0.0217274, -0.0174013, 0.0755156, -0.0195853, -0.0531407, -0.049558, -0.0331759, 0.00556946, 0.0206657, 0.0769461, 0.028109, 0.0102448, -0.0740878, -0.0177057, -0.0770964, -0.0118088, 0.0764246, -0.0222045, 0.00699027, -0.0522232, -2.80431e-05, 0.0604081, 0.0322727, 0.03611, -0.0635013, 0.0715293, -0.0349759, 0.00625128, 0.0709754, 0.010636, -0.0350344, -0.0611721, -0.0487601, -0.0161475, -0.0533937, 0.055917, -0.0200445, 0.0551067, -0.05699, 0.0100061, 0.0600315, 0.00570029, -0.0523735, -0.0535812, 0.0478202, -0.0350672, 0.0256846, -0.0565396, -0.0502874, 0.011264, 0.0597698, 0.0517776, 0.0610606, 0.0466546, 0.0219769, -0.0680019, 0.0409379, 0.00889603, 0.00210545, -0.0756134, -0.0258322, -0.0138763, -0.0781901, 0.00948979, -0.0234623, -0.0667809, 0.037162, 0.0789291, -0.00867867, -0.00866181, -0.0324318, -0.0135698, 0.071719, 0.0662598, 0.0420902, 0.014796, -0.0262821, -0.0750175, 0.00866237, 0.0241473, -0.0163881, 0.0743655, -0.0326604, 0.0577695, 0.044596, -0.0434337, 0.0644811, -0.0185305, -0.0394674, -0.0688867, 0.00899206, -0.0707686, 0.0369877, 0.00139054, -0.0458046, 0.0155178, -0.0634859, 0.052513, 0.020985, -0.0564075, -0.045701, -0.00517239, -0.065289, 0.0468601, -0.0393952, 0.0513956, 0.0474432, 0.0132906, 0.0627997, -0.00313187, 0.0765885, -0.0228901, 0.0371942, 0.0690812, -0.0152286, -0.0743551, -0.0288246, 0.00360934, 0.0647283, 0.0426955, -0.0193193, 0.0359598, -0.0101409, 0.0705991, -0.0488262, 0.0520418, 0.0360306, -0.0385237, 0.0404539, -0.0572197, -0.0461075, 0.0642307, -0.0114276, -0.0789429, 0.00351034, -0.0117506, -0.0280273, -0.0448798, -0.0598204, -0.00322196, 0.073508, -0.0312872, -0.0494133, 0.0510786, 0.0365001, -0.0423787, 0.0609638, 0.0295193, 0.0524796, 0.00683868, 0.0597854, -0.0259017, -0.0616974, 0.0436646, -0.040205, -0.0498153, -0.047796, -0.0574572, -0.0300282, -0.0467413, -0.067249, -0.0422067, -0.00837435, -0.0295658, 0.0581598, 0.0462271, 0.00999411, -0.040012, 0.0684634, 0.00351057, -0.060362, -0.0521819, -0.0496302, 0.0227742, -0.0582889, 0.0183058, -0.0365501, 0.068567, -0.0750782, -0.0230668, -0.0146798, -0.0563178, -0.0557713, -0.00984155, -0.0084005, -0.0773416, 0.0184601, 0.026578, 0.0079148, -0.0748498, -0.031131, -0.0516748, -0.0524086, -0.000491837, 0.0789488, -0.0124842, -0.0422204, -0.0650856, 0.0191158, -0.055785, 0.0295247, 0.0489312, -0.0276626, 0.0515892, 0.0544139, -0.0678407, -0.0119904, -0.0403606, -0.0690788, -0.0329284, -0.0228785, 0.0289504, 0.0109408, 0.0737273, -0.0149922, -0.0183654, -0.0764319, -0.00238999, -0.00808758, 0.0793825, -0.0184859, 0.0427583, -0.0649017, -0.0305669, 0.0472166, 0.0568286, -0.00556265, 0.0779195, 0.0170437, -0.00826983, 0.0754286, -0.0251497, -0.0761297, -0.00951333, -0.0224259, 0.0753977, 0.0265869, 0.000880082, 0.041947, -0.0476063, 0.0485542, 0.0780689, -0.00841685, 0.0148108, 0.0387999, 0.0210087, -0.0665428, 0.0668572, 0.0287428, 0.0328196, 0.0725151, -0.0206165, -0.0262876, -0.0364904, 0.0534192, 0.0469138, 0.0305839, -0.0501928, -0.0540953, 0.0551522, -0.0472639, -0.0332883, 0.0782679, 0.00692241, 0.0144438, 0.0712012, 0.0346971, 0.0100743, 0.0691359, -0.0331686, -0.0224332, -0.0419913, -0.067334, 0.00986501, -0.0763209, 0.022747, 0.00546, 0.0162886, 0.0302497, 0.0720481, 0.0314201, 0.0679652, 0.0279247, 0.0649266, 0.0417845, 0.0205611, 0.0469104, 0.0323475, -0.0561182, -0.0151597, -0.000645686, -0.0784621, -0.0696589, 0.038785, -0.00458334, -0.007712, -0.0780999, -0.0153723, 0.0168586, 0.0663761, -0.0412754, -0.059888, 0.0239143, 0.0471115, -0.057995, -0.0313796, 0.0450815, 0.00998753, -0.0487702, -0.062457, 0.0148446, 0.0709092, 0.0338601, 0.0161132, -0.0519848, -0.0585923, -0.0369931, 0.0708936, -0.0011113, -0.0116806, 0.0432699, -0.0660947, 0.015465, -0.00254303, -0.078419, -0.025749, 0.0751598, 0.00888771, 0.0454523, 0.065223, -0.00778106, -0.0598329, 0.0455124, -0.0270386, 0.0413231, 0.0258726, -0.0634101, -0.0701139, 0.0383273, -0.000834487, -0.0604108, -0.00513243, -0.0520367, 0.0289359, -0.0745418, -0.00196132, -0.0231119, -0.00363024, 0.076522, 0.0733221, -0.0145015, -0.0281518, -0.0289785, 0.0328712, -0.066802, -0.0531896, 0.0152089, -0.0575565, 0.0482631, -0.0608041, 0.018855, -0.066938, -0.0283275, -0.0330484, 0.0629349, -0.0192123, -0.0453072, 0.0518262, -0.0305473, 0.052649, -0.0514265, -0.00914514, -0.0603928, 0.00587299, 0.0206647, 0.0769344, 0.070204, -0.00779401, 0.0373351, -0.0421465, 0.0537567, -0.0415558, -0.0111691, -0.0293414, 0.0733866, 0.0421838, 0.0395954, 0.0551756, 0.0331091, -0.0676963, -0.0266548, 0.0286414, 0.0614482, 0.0423359, 0.0691181, -0.0352948, 0.0187424, -0.0462415, -0.0513798, -0.0401202, -0.0684401, 0.0198416, 0.03629, -0.0319524, 0.0110723, -0.0724296, 0.0791469, 0.00943658, 0.00456107, -0.0738517, 0.0181353, -0.0245648, 0.0688966, -0.022554, -0.0334029, 0.0375192, -0.0535128, -0.0460354, 0.013586, -0.0199942, 0.0761995, 0.0324467, 0.0729933, 0.0023384, -0.00837705, -0.0562472, -0.0560661, -0.0608812, -0.0376278, -0.0354129, -0.0183994, 0.0777674, -0.00239132, 0.0115224, 0.0762494, -0.0211835, -0.0178485, -0.0325933, 0.0706935, -0.0552942, -0.00163896, -0.0576019, 0.0382041, 0.0174573, -0.0679519, -0.0288689, 0.00657695, -0.0741724, 0.0708816, -0.0258988, 0.0261431, 0.0269303, -0.0679356, 0.0323578, 0.0180494, -0.0462144, 0.0627273, -0.0711366, 0.0356844, 0.00671855, 0.0739265, -0.00655542, 0.0295484, -0.0326484, -0.0262289, 0.0680528, 0.037405, 0.0662939, 0.0243908, 0.0629042, 0.0406035, -0.0279285, 0.0286883, 0.0540366, -0.0513829, 0.0426146, 0.0501949, 0.0452653, -0.046567, -0.0336903, -0.0556293, 0.0182772, 0.0750354, -0.020657, -0.0112605, -0.0307108, -0.0727992, 0.0282987, 0.0264645, -0.0699019, 0.0719584, 0.0301277, -0.0168216, 0.07759, 0.00695292, 0.0175954, -0.0313724, 0.0153498, -0.0718341, 0.0476267, 0.0642138, 0.000354112, 0.013499, 0.0587125, 0.0524665, -0.044918, 0.0631319, 0.0197783, -0.0484819, 0.0163812, -0.0613007, 0.0683791, -0.0414045, -0.000358773, 0.0147215, 0.0480421, -0.0620924, 0.0797795, 0.00101307, 0.00234926, -0.0490734, 0.0444311, -0.0446689, 0.0607102, -0.0386132, 0.03472, 0.00779521, 0.0725392, -0.0326176, 0.0653731, -0.0101095, 0.0447806, 0.0660603, -0.0327933, 0.0306605, -0.0056636, -0.0444265, 0.066184, -0.0412706, 0.0470303, -0.0497674, -0.00481769, 0.0740197, 0.0299481, 0.029234, -0.0699251, 0.0252641, -0.0108101, -0.078863, 0.00747228, -0.0106527, 0.0455624, -0.0647568, 0.0410941, 0.0653889, 0.020449, -0.0110977, -0.0513192, 0.0602658, 0.0562711, 0.0561794, 0.00743816, 0.00721474, 0.00764014, -0.0791763, 0.0367296, -0.071052, 0.000968356, -0.0467033, 0.0359887, 0.0539198, -0.0700755, 0.0200996, 0.0326367, 0.0257538, 0.0173489, -0.073588, -0.01237, 0.0409016, 0.0675808, 0.0212661, 0.0685084, -0.0351752, -0.0699492, -0.030273, -0.0236115, -0.0101686, -0.00721933, 0.0788422, 0.0509058, 0.00522679, -0.0614135, -0.0426874, -0.0536446, -0.041097, -0.0663066, -0.0154421, -0.0416371, -0.0140244, -0.0241574, -0.0748385, 0.0573324, 0.0535284, 0.0153267, -0.0476118, 0.0298278, 0.0568264, -0.0280866, 0.0672745, 0.0328471, 0.0249249, 0.00590964, -0.0756561, 0.0435029, 0.0143201, 0.0654436, -0.0212914, -0.0770354, -0.00314393, 0.0545017, -0.0583062, -0.00423536, 0.0368439, 0.0392243, -0.059061, -0.0731382, 0.00989319, -0.0307484, 0.0366803, -0.0283304, 0.0650628, -0.0327832, 0.0710659, 0.0164397, -0.0638699, 0.0263686, -0.0402338, -0.023622, -0.0763644, 0.00255817, -0.00266034, 0.0505405, -0.0618214, 0.0412406, 0.00828895, 0.0678317, -0.0702885, 0.0370416, 0.00792936, 0.0793899, 0.00829389, 0.00187548, -0.0666405, -0.00314191, -0.0440069, -0.0150329, -0.0776403, -0.0116993, 0.0755593, -0.0140637, 0.0218318, -0.0736444, 0.0309829, -0.000784528, -0.0606196, -0.0064767, -0.0516048, 0.0689992, -0.0112954, 0.038663, 0.0441448, -0.0567575, -0.0348813, -0.01139, -0.0735687, -0.0291785, 0.0595486, 0.0302341, -0.0437961, 0.00221761, -0.00831662, 0.0793703, 0.0537053, -0.0352293, -0.0475188, 0.0693583, -0.0099909, 0.0383315, 0.0454899, -0.0604439, 0.0256599, -0.0794371, -0.00877516, -9.0336e-05, -0.029839, -0.0537733, -0.0509966, 0.0303151, -0.0710543, 0.020774, -0.0585592, -0.0325085, -0.0435657, 0.0558096, 0.0477154, -0.0315223, 0.00134761, -0.0572131, 0.0557905, 0.0413343, 0.000202464, -0.068276, 0.0735124, 0.0265623, -0.0164501, -0.0355374, 0.0715661, -0.00257603, 0.0781486, -0.0154136, 0.0057863, 0.0515252, -0.0414204, 0.044912, -0.0303898, 0.0575054, 0.0465245, -0.0494343, -0.0364546, 0.0510906, -0.0793517, 0.0069232, 0.00508206, 0.0736159, -0.00935014, -0.0296676, 0.0504544, 0.0606174, 0.0125565, 0.0318084, 0.00166017, -0.0732383, -0.0153991, 0.0357123, -0.0697684, 0.0350832, -0.0688724, 0.0201796, -0.0530477, -0.0562494, -0.0201132, -0.0322519, -0.00723671, -0.0726978, 0.0248418, -0.059778, -0.046852, -0.0107413, 0.0308742, -0.0728315, -0.0492427, -0.0558329, 0.0289547, -0.02432, 0.0245829, -0.0719563, -0.0100584, -0.0751065, -0.0255056, 0.0478948, -0.0638983, 0.00303877, 0.016549, -0.0680052, 0.0386522, -0.0641484, 0.0230927, 0.041645, 0.0713044, 0.0129402, -0.0335516, 0.0366998, -0.0498322, 0.0504885, 0.00617442, -0.0705834, -0.0370375, 0.051087, 0.0129424, -0.0600126, -0.0523416, 0.0586611, -0.0142415, -0.0203994, 0.0736507, -0.0234977, 0.0400212, 0.0668638, 0.0179357, -0.0590744, -0.0154587, 0.0514198, 0.0501528, 0.0402474, 0.0475082, 0.0519261, -0.0268346, 0.0545664, 0.0219997, 0.00623935, 0.0765593, -0.0018796, 0.0636797, 0.0482839, -0.00320071, -0.0352056, 0.0715824, 1.10136e-05, -0.021635, -0.0769126, 0.0283435, 0.0411953, 0.0622907, -0.0753833, -0.0126972, 0.023421, -0.0095268, -0.0355741, 0.0708367, -0.0124426, 0.0337889, 0.0713408, 0.0501069, -0.0416136, -0.0462391, 0.0071037, 0.0279863, -0.0744978, 0.0746115, 0.0285756, 0.000708368, -0.0631796, -0.0373961, -0.0313788, -0.0571635, -0.0539, 0.0145032, 0.07646, -0.0228837, -0.00238276, -0.064423, -0.0250002, 0.0401027, -0.0100033, -0.0736791, 0.0294179, 0.0518496, 0.0562, 0.0230991, -0.00490733, 0.0491027, -0.0628423, -0.061504, -0.050609, 0.00667237, 0.0659989, -0.0349245, -0.0283144, 0.0524442, 0.034139, 0.049742, -0.0424582, 0.0663982, -0.0133936, -0.0725368, 0.00809245, 0.0323335, 0.0563136, 0.048331, 0.0296486, 0.0225465, -0.0625587, -0.0443931, -0.00104495, 0.00860748, -0.0794036, -0.0432849, 0.0366563, 0.0562344, -0.0341864, -0.0641498, -0.0332594, 0.0724822, -0.0228391, 0.0244193, -0.0675858, 0.0426314, -0.000483867, 0.027945, -0.0718466, 0.0211114, -0.0559893, -0.0551836, -0.0140126, -0.0316777, -0.0612697, 0.040334, 0.0765138, -0.00167308, -0.0231449, -0.0523774, -0.0400879, 0.045244, -0.0317321, -0.00271716, -0.0732738, 0.0597068, 0.0162401, 0.0504929, -0.0404324, -0.067722, -0.0131406, -0.051452, 0.0382284, 0.0476726, 0.0152746, 0.0779432, 0.00916651, 0.076298, 0.00544834, -0.0232976, 0.0170027, -0.0479238, -0.0616363, 0.0176072, 0.0376858, -0.0681528, -0.0406713, -0.0194157, -0.0659555, 0.0518439, 0.0154917, -0.0586858, -0.0433521, 0.00979448, 0.066364, -0.0681524, -0.0405567, 0.0097405, -0.0251555, 0.00623955, 0.0755384, -0.0711658, 0.0350296, -0.00909584, 0.070566, 0.00807487, -0.0364858, -0.0534493, -0.0125341, 0.0580001, 0.062925, -0.0220511, -0.0439578, -0.0697172, -0.00142471, -0.0389792, 0.00108642, -0.0095929, 0.0793107, 0.0181445, -0.0018133, 0.0777639, 0.0248553, 0.0303433, 0.0694737, -0.0588861, -0.0535853, 0.00691769, -0.0285181, -0.0251779, -0.0702614, -0.063508, -0.0458842, -0.0157506, 0.0608333, 0.0382804, -0.0348456, -0.0712652, -0.0178502, -0.031423, 0.0245874, 0.0755792, 0.00859457, 0.0733402, 0.0266331, 0.0170401, 0.0173294, 0.0698923, -0.0346068, 0.0025651, -0.0137779, -0.0786213, -0.00134688, -0.00937578, -0.0793174, 0.0319095, -0.0697124, 0.0225039, 0.0400418, 0.00419545, -0.0690178, 0.00290609, -0.0580341, 0.0548857, 0.0351737, -0.0134309, 0.0703879, -0.0115229, 0.0699842, 0.0368323, -0.0650304, -0.00131421, -0.0462758, 0.0793325, -0.0077876, -0.00390387, 0.0505793, -0.0567493, 0.0245988, -0.0389518, -0.0231335, -0.0657233, 0.073598, -0.0304263, 0.0055816, 0.0403889, 0.0564471, -0.0395694, -0.0593783, 0.0230103, -0.048254, 0.0624382, 0.0288142, -0.0406707, -0.0532701, -0.0482116, -0.0350022, -0.0482283, 0.0590866, -0.0238032, -0.0167063, 0.0587734, 0.0514914, -0.0747188, -0.0129002, -0.0251494, 0.0310393, -0.0733574, 0.00686742, -0.0294037, -0.0373125, 0.0641468, -0.0295139, 0.0244369, -0.0700996, 0.0260003, 0.00958187, 0.0749159, 0.0662941, -0.0426649, 0.0131571, -0.0183621, 0.00230424, -0.0777095, -0.0310492, 0.060749, -0.0415494, 0.00112074, 0.0242252, 0.0761075, -0.00668149, 0.0361127, 0.0709179, -0.0558132, 0.0525058, 0.0230409, -0.0306636, -0.027124, -0.0685736, 0.0562107, 0.0011703, 0.0567644, 0.00883602, -0.07888, 0.00954828, 0.00142499, 0.0589475, -0.0539267, 0.0431141, 0.0604811, -0.0294624, -0.0368051, -0.0550627, 0.0447163, -0.0502014, -0.0347335, -0.0516122, 0.0445029, 0.0568677, 0.0342244, 0.0278801, -0.0435202, 0.0608527, 0.0680262, 0.0326709, 0.0261253, 0.0762904, 0.0225564, 0.00755313, -0.0207327, -0.0761008, -0.0130275, 0.0321414, -0.0629505, -0.0374456, 0.0449209, 0.039005, -0.0534526, 0.0632902, -0.00173885, 0.048659, 0.0424886, -0.0236091, -0.0634563, -0.0425634, 0.0664388, 0.012918, 0.0382126, -0.0551094, 0.0434111, -0.00462489, 0.0759632, -0.02451, -0.0370541, 0.0146281, 0.0692504, -0.0793322, -0.0096639, -0.000539931, -0.051534, 0.0340065, 0.0508386, 0.0773551, -0.013479, 0.0150459, 0.0434221, 0.0626956, -0.0240594, 0.0176054, -0.0315394, 0.0712016, -0.0314722, -0.0713527, 0.0176353, -0.0756229, -0.00161662, 0.025604, 0.021527, -0.0744464, -0.0198327, 0.0377586, 0.0587417, 0.0388521, 0.0269231, -0.021161, -0.0721188, -0.0363407, -0.0661594, -0.0261905, 0.0228437, -0.0646451, 0.0410055, 0.0142674, -0.0701664, -0.0355286, -0.0166685, 0.00841634, 0.0776773, 0.0211927, 0.0334315, 0.0694421, -0.049616, 0.0601177, -0.0173997, 0.0340957, -0.0235045, 0.0682684, -0.0601714, 0.0377004, 0.0365172, -0.0749606, 0.0263366, 0.00862964, -0.00784752, 0.0714848, -0.0349713, 0.0527041, -0.0322789, 0.0507124, -0.00125685, -0.0789976, -0.0121034, -0.0471617, 0.063453, -0.0117355, -0.00623827, 0.00198788, -0.0795801, 0.0213274, 0.0455224, -0.0621114, -0.065374, 0.0199105, 0.0413685, 0.0791998, -0.0101, 0.00233789, -0.0424755, 0.0530923, -0.0421555, -0.0452672, 0.0511673, 0.0414699, -0.0602102, 0.0425655, 0.0307154, -0.00260389, 0.0755059, -0.0261212, 0.0673072, -0.0296306, -0.0309946, -0.0685428, 0.0172479, -0.0372927, -0.0106478, -0.0314019, -0.072612, 0.0503476, 0.0408099, 0.0467534, 0.00882976, -0.0654842, 0.0449268, 0.0135994, 0.0770042, 0.016874, 0.0559601, -0.0491041, -0.0289756, 0.0752935, 0.00506162, -0.026184, 0.0332922, -0.052548, -0.0503167, -0.0113666, 0.0711045, 0.0348192, -0.023239, 0.00704762, -0.0761566, 0.0351609, 0.0181909, 0.0694318, -0.0691973, -0.0165377, -0.0363688, 0.0289775, -0.0293364, -0.0683718, -0.00107066, -0.0251866, 0.0758337, -0.0748898, 0.00823887, -0.0263811, 0.0586073, 0.0404931, 0.036217, 0.0311909, 0.0676483, -0.0290016, -0.0168108, 0.0543459, 0.0561514, -0.0783431, 0.0108212, -0.01134, 0.0368325, 0.018746, -0.0684937, 0.0476722, -0.0615675, 0.0179018, -0.0797693, 0.00213399, 0.00254807, -0.0133579, 0.0752603, 0.0233817, -0.0497897, 0.033819, 0.0526219, 0.0416251, -0.0636217, -0.0246265, 0.0489208, 0.0623141, 0.0106823, -0.00481133, -0.024993, -0.0757055, 0.0656916, -0.0326621, 0.0315855, 0.054312, 0.0529802, -0.0251265, 0.0348017, 0.0719595, -0.000529205, 0.0186981, 0.0220202, 0.0744274, 0.0783243, -0.0101795, 0.0118636, 0.0372509, -0.0536842, -0.0460325, -0.0502305, -0.0621306, -0.00234717, -0.0561827, -0.023147, 0.0518202, -0.0177949, 0.018609, 0.075692, -0.0112304, -0.0614854, -0.0497616, 0.076742, -0.020535, -0.0086971, 0.0491349, 0.0311789, 0.054719, 0.0235169, 0.0145514, -0.0749678, 0.0761746, 0.0196687, 0.0144419, 0.0571151, 0.0540328, -0.0141044, 0.0435351, 0.019512, 0.0641307, -0.0125085, -0.0216711, 0.0758269, -0.0474978, -0.0566014, 0.0304464, 0.0165212, -0.0715216, 0.0316682, -0.0764286, 0.00264843, -0.0233956, 0.00571178, 0.0126983, -0.0786474, -0.0740374, -0.0224891, 0.0195763, -0.0419328, 0.0331428, -0.0594191, 0.0180525, 0.0519401, 0.0581166, -0.0525134, -0.0286977, -0.0530336, 0.011709, 0.0749077, -0.0253767, -0.069987, 0.037956, -0.00629696, -0.0151392, -0.00872422, -0.0779944 )
direction = Vector3( 1, 1, 1 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
radial_accel = 0.25
scale_amount_curve = SubResource( 6 )
[connection signal="timeout" from="CrowSoundTimer" to="." method="_on_CrowSoundTimer_timeout"]
[connection signal="timeout" from="CrowSoundTimer2" to="." method="_on_CrowSoundTimer2_timeout"]
[connection signal="timeout" from="CameraShakeTimer" to="." method="_on_CameraShakeTimer_timeout"]
